# arabic-adventures

./: .env.example  .gitignore  README.md  README_CLIENT.txt  curl-output.txt  d_files.txt  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  prisma.config.ts  reset-dev-cache.bat  response.html  run.bat  setup-app.bat  start-app.bat  start-dev-tools.bat  start-dev.bat  tsconfig.json  verbs.json  verbs_decoded.json  vercel.json  vitest.config.ts  تعليمات_التشغيل.txt
development/audio/archive/azure-key-provider-/azure/: README.md  pyproject.toml  requirements.txt
development/audio/edge-tts/: pyproject.toml  requirements.txt  spoken-text-overrides.json
development/audio/edge-tts/reports/: activity-audio-coverage.json  activity-audio-coverage.md  ancient-egyptian-teacher-audio-binding.json  ancient-egyptian-teacher-audio-binding.md  audio-architecture-analysis.json  audio-architecture-analysis.md  audio-remediation-blueprint.md  audio-system-fresh-review.json  audio-system-fresh-review.md  audio-system-remediation-plan.md  final-verification.json  final-verification.md  full-runtime-audio-binding.json  full-runtime-audio-binding.md  preflight.json  progress.json  progress.md  pronunciation-review.json  pronunciation-review.md
development/audio/edge-tts/src/edge_audio/: audio_conversion.py  cli.py  config.py  edge_provider.py  file_utils.py  generator.py  (+7 more)
development/audio/edge-tts/staging/: audio-manifest.edge.candidate.json
development/audio/edge-tts/state/: generation-state.json
development/audio/edge-tts/tests/: test_audio.py
(+558 files in other folders)
